api for access logic

--- a/.env.example
+++ b/.env.example
@@ -58,3 +58,5 @@ VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 LOGIN_USERNAME=true
+
+ENTRY_MODE="STRICT" #STRICT In and Out either direction need a proper record only can continue
