--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "vue": "^3.2.41"
     },
     "dependencies": {
+        "@splidejs/splide-extension-video": "^0.8.0",
         "@splidejs/vue-splide": "^0.6.12",
         "bootstrap-icons": "^1.10.4",
         "vue-timer-hook": "^1.0.84"
