--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dependencies": {
         "@splidejs/splide-extension-video": "^0.8.0",
         "@splidejs/vue-splide": "^0.6.12",
+        "@vueform/multiselect": "^2.6.2",
         "bootstrap-icons": "^1.10.4",
         "vue-timer-hook": "^1.0.84"
     }
