--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,12 @@ DB_DATABASE=schott_smoking
 DB_USERNAME=root
 DB_PASSWORD=root
 
+DB_HOST_SQLSRV=SMYPENS0016
+DB_PORT_SQLSRV=3306
+DB_DATABASE_SQLSRV=XPNDB
+DB_USERNAME_SQLSRV=root
+DB_PASSWORD_SQLSRV=root
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
