--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
         "@splidejs/vue-splide": "^0.6.12",
         "@vueform/multiselect": "^2.6.2",
         "bootstrap-icons": "^1.10.4",
+        "chart.js": "^4.4.0",
+        "vue-chartjs": "^5.2.0",
         "vue-timer-hook": "^1.0.84"
     }
 }
