add test script

--- a/setup/.env.schottserver
+++ b/setup/.env.schottserver
@@ -35,12 +35,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=sandbox.smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=a44e6cc2e78eb4
-MAIL_PASSWORD=8d2c1131d2fcea
+MAIL_HOST=10.4.215.110
+MAIL_PORT=25
+MAIL_USERNAME=
+MAIL_PASSWORD=
 MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_FROM_ADDRESS="sgm.info@schott.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
