--- a/.env.example
+++ b/.env.example
@@ -13,13 +13,13 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=schott_smoking
 DB_USERNAME=root
-DB_PASSWORD=root
+DB_PASSWORD=
 
 DB_HOST_SQLSRV=SMYPENS0016
 DB_PORT_SQLSRV=3306
 DB_DATABASE_SQLSRV=XPNDB
-DB_USERNAME_SQLSRV=root
-DB_PASSWORD_SQLSRV=root
+DB_USERNAME_SQLSRV=bioenergy
+DB_PASSWORD_SQLSRV=123
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
