Ubuntu fail to connect SQLSRV using hostname, use IP address

--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,8 @@ DB_DATABASE=schott_smoking
 DB_USERNAME=bioenergy
 DB_PASSWORD=123
 
-DB_HOST_SQLSRV=SMYPENS0016
+#DB_HOST_SQLSRV=SMYPENS0016
+DB_HOST_SQLSRV=10.22.110.9 #Use IP Address hostname fail to connect
 DB_PORT_SQLSRV=1433
 DB_DATABASE_SQLSRV=XPNDB
 DB_USERNAME_SQLSRV=bioenergy
